test/errors/test_invalid_mode.jl
include("../utils.jl")

@test_throws ErrorException caronte(mode="invalid_mode")
